--- a/styles/main.css
+++ b/styles/main.css
@@ -107,7 +107,14 @@ button {
 }
 
 .faqBox{
-    border:1px solid rgb(2, 43, 6);
+    border:3px solid rgb(2, 43, 6);
     width: 150px;
     padding: 10px;
+    margin-top: 30px;
+    margin-left: 550px;
+}
+
+#accordionFlushExample{
+    border:3px solid rgb(2, 43, 6);
+    color:  rgb(2, 43, 6) ;
 }
