--- a/styles/main.css
+++ b/styles/main.css
@@ -118,3 +118,9 @@ button {
     border:3px solid rgb(2, 43, 6);
     color:  rgb(2, 43, 6) ;
 }
+
+.wishlist-title{
+    font-size: 50px;
+    margin-top: 100px;
+    margin-left: 80px;
+}
